--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -72,7 +72,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="588.0">
                <children>
-                  <Button fx:id="newDictBtn" layoutX="6.0" layoutY="10.0" mnemonicParsing="false" text="Generate New Dictionary" />
+                  <Button fx:id="newDictBtn" layoutX="6.0" layoutY="10.0" mnemonicParsing="false" onAction="#generateDictBtn" text="Generate New Dictionary" />
                   <Button fx:id="settingsBtn" layoutX="512.0" layoutY="7.0" mnemonicParsing="false" text="Settings" />
                   <Button fx:id="importBtn" layoutX="103.0" layoutY="51.0" mnemonicParsing="false" onAction="#importBooksBtn" prefHeight="31.0" prefWidth="185.0" text="Import Books" />
                   <TableView fx:id="tableView" editable="true" layoutY="127.0" prefHeight="432.0" prefWidth="589.0">
