--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -91,7 +91,7 @@
                       <MenuItem mnemonicParsing="false" text="Action 2" />
                     </items>
                   </MenuButton>
-                  <Button fx:id="searchBtn" layoutX="6.0" layoutY="91.0" mnemonicParsing="false" text="Search" />
+                  <Button fx:id="deleteBtn" layoutX="6.0" layoutY="91.0" mnemonicParsing="false" onAction="#deleteBtn" text="Delete" />
                </children>
             </AnchorPane>
         </items>
