--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -13,39 +13,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
-   <left>
-      <SplitPane prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <VBox alignment="CENTER" layoutX="33.0" layoutY="142.0" prefHeight="556.0" prefWidth="198.0" spacing="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
-                        <Button fx:id="booksBtn" mnemonicParsing="false" text="Books" />
-                        <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-                        <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
-                     </children>
-                  </VBox>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </left>
-   <bottom>
-      <SplitPane orientation="VERTICAL" prefHeight="10.0" prefWidth="800.0" BorderPane.alignment="CENTER">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="10.0" prefWidth="798.0" />
-        </items>
-      </SplitPane>
-   </bottom>
-   <right>
-      <SplitPane prefHeight="160.0" prefWidth="10.0" BorderPane.alignment="CENTER">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="10.0" />
-        </items>
-      </SplitPane>
-   </right>
+<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -68,23 +36,13 @@
       </MenuBar>
    </top>
    <center>
-      <SplitPane maxHeight="-Infinity" minHeight="-Infinity" orientation="VERTICAL" prefHeight="560.0" prefWidth="590.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.27848101265822783" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="588.0">
+          <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="588.0">
                <children>
                   <Button fx:id="newDictBtn" layoutX="6.0" layoutY="10.0" mnemonicParsing="false" onAction="#generateDictBtn" text="Generate New Dictionary" />
                   <Button fx:id="settingsBtn" layoutX="512.0" layoutY="7.0" mnemonicParsing="false" text="Settings" />
                   <Button fx:id="importBtn" layoutX="103.0" layoutY="51.0" mnemonicParsing="false" onAction="#importBooksBtn" prefHeight="31.0" prefWidth="185.0" text="Import Books" />
-                  <TableView fx:id="tableView" editable="true" layoutY="127.0" prefHeight="432.0" prefWidth="589.0">
-                    <columns>
-                      <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="300.0" text="Title" />
-                      <TableColumn fx:id="uniqueWordsCol" prefWidth="130.0" text="Unique Words" />
-                        <TableColumn fx:id="totalWordsCol" prefWidth="130.0" text="Total Words" />
-                    </columns>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </TableView>
                   <MenuButton fx:id="actionBtn" layoutX="8.0" layoutY="51.0" mnemonicParsing="false" text="Action">
                     <items>
                       <MenuItem mnemonicParsing="false" text="Action 1" />
@@ -94,7 +52,41 @@
                   <Button fx:id="deleteBtn" layoutX="6.0" layoutY="91.0" mnemonicParsing="false" onAction="#deleteBtn" text="Delete" />
                </children>
             </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <TableView fx:id="tableView" editable="true" prefHeight="429.0" prefWidth="588.0" AnchorPane.bottomAnchor="-34.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="300.0" text="Title" />
+                      <TableColumn fx:id="uniqueWordsCol" prefWidth="130.0" text="Unique Words" />
+                        <TableColumn fx:id="totalWordsCol" prefWidth="130.0" text="Total Words" />
+                    </columns>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </TableView>
+               </children>
+            </AnchorPane>
         </items>
       </SplitPane>
    </center>
+   <left>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox alignment="CENTER" prefHeight="556.0" prefWidth="198.0" spacing="50.0">
+               <children>
+                  <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
+                  <Button fx:id="booksBtn" mnemonicParsing="false" text="Books" />
+                  <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
+                  <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
+   </left>
+   <right>
+      <AnchorPane maxWidth="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </right>
+   <bottom>
+      <AnchorPane maxHeight="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
