--- a/src/main/java/controllers/MainView.fxml
+++ b/src/main/java/controllers/MainView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
+<BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
    <left>
       <SplitPane prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
@@ -20,7 +20,7 @@
                         <Button fx:id="homeBtn" mnemonicParsing="false" text="Home" />
                         <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
                         <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-                        <Button fx:id="dictBtn" mnemonicParsing="false"  onAction= "#goDictionary" text="Dictionaries" />
+                        <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
                      </children>
                   </VBox>
                </children>
