--- a/src/main/java/controllers/DictionaryView.fxml
+++ b/src/main/java/controllers/DictionaryView.fxml
@@ -2,8 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
@@ -11,50 +10,17 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="dictView" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.DictionaryController">
    <bottom>
       <AnchorPane maxHeight="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="CENTER" prefHeight="556.0" prefWidth="198.0" spacing="50.0">
-               <children>
-                  <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
-                  <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
-                  <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-                  <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
+      <AnchorPane maxWidth="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </left>
    <right>
       <AnchorPane maxWidth="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </right>
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
    <center>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
@@ -88,4 +54,17 @@
         </items>
       </SplitPane>
    </center>
+   <top>
+      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button fx:id="dictBtn" mnemonicParsing="false" text="Dictionaries" />
+            <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
+            <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
+            <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
+        </buttons>
+         <padding>
+            <Insets right="10.0" />
+         </padding>
+      </ButtonBar>
+   </top>
 </BorderPane>
