--- a/src/main/java/controllers/MainView.fxml
+++ b/src/main/java/controllers/MainView.fxml
@@ -1,43 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
    <center>
       <SplitPane dividerPositions="0.27848101265822783" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
           <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="588.0">
                <children>
-                  <Button layoutX="20.0" layoutY="49.0" mnemonicParsing="false" text="Generate New Dictionary" />
-                  <Button layoutX="461.0" layoutY="49.0" mnemonicParsing="false" text="Settings" />
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Generate New Dictionary" />
+                  <Button layoutX="677.0" layoutY="14.0" mnemonicParsing="false" text="Settings" />
                </children>
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
@@ -51,17 +28,19 @@
       <AnchorPane maxHeight="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
    <left>
-    <AnchorPane prefHeight="300.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="CENTER" layoutX="33.0" layoutY="142.0" prefHeight="556.0" prefWidth="198.0" spacing="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Button fx:id="homeBtn" mnemonicParsing="false" text="Home" />
-                  <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
-                  <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-                  <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
+    <AnchorPane maxWidth="10.0" prefHeight="300.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </left>
+   <top>
+      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
+            <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
+          <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
+            <Button fx:id="homeBtn" mnemonicParsing="false" text="Home" />
+        </buttons>
+         <padding>
+            <Insets right="10.0" />
+         </padding>
+      </ButtonBar>
+   </top>
 </BorderPane>
