--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -15,7 +15,7 @@
    <center>
       <SplitPane dividerPositions="0.27848101265822783" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="588.0">
+          <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="121.0" prefWidth="778.0">
                <children>
                   <Button fx:id="newDictBtn" layoutX="6.0" layoutY="10.0" mnemonicParsing="false" onAction="#generateDictBtn" text="Generate New Dictionary" />
                   <Button fx:id="settingsBtn" layoutX="512.0" layoutY="7.0" mnemonicParsing="false" text="Settings" />
@@ -33,10 +33,12 @@
                <children>
                   <TableView fx:id="tableView" editable="true" prefHeight="429.0" prefWidth="588.0" AnchorPane.bottomAnchor="-34.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="300.0" text="Title" />
-                      <TableColumn fx:id="uniqueWordsCol" prefWidth="130.0" text="Unique Words" />
-                        <TableColumn fx:id="totalWordsCol" prefWidth="130.0" text="Total Words" />
+                      <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="270.0" text="Title" />
+                        <TableColumn fx:id="authorCol" onEditCommit="#changeAuthorCellEvent" prefWidth="105.0" text="Author" />
                         <TableColumn fx:id="ageCol" onEditCommit="#changeAgeCellEvent" prefWidth="75.0" text="Age" />
+                        <TableColumn fx:id="isbnCol" onEditCommit="#changeISBNCellEvent" prefWidth="75.0" text="ISBN" />
+                      <TableColumn fx:id="uniqueWordsCol" prefWidth="109.0" text="Unique Words" />
+                        <TableColumn fx:id="totalWordsCol" prefWidth="151.0" text="Total Words" />
                     </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
