--- a/src/main/java/controllers/LibraryView.fxml
+++ b/src/main/java/controllers/LibraryView.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
@@ -27,7 +28,7 @@
           <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="588.0">
                <children>
                   <Button layoutX="510.0" layoutY="18.0" mnemonicParsing="false" text="Settings" />
-                  <Button layoutX="108.0" layoutY="58.0" mnemonicParsing="false" text="Create New Library" />
+                  <Button fx:id="createNewLib" layoutX="108.0" layoutY="58.0" mnemonicParsing="false" onAction="#newLibrary" text="Create New Library" />
                   <Button layoutX="2.0" layoutY="18.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="185.0" text="Upload Library" />
                   <Button layoutX="3.0" layoutY="100.0" mnemonicParsing="false" text="Search" />
                   <MenuButton layoutX="3.0" layoutY="57.0" mnemonicParsing="false" text="Action">
@@ -36,15 +37,17 @@
                         <MenuItem mnemonicParsing="false" text="Action 2" />
                      </items>
                   </MenuButton>
+                  <TextField fx:id="newLibTitle" layoutX="277.0" layoutY="60.0" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView prefHeight="398.0" prefWidth="588.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableView" prefHeight="398.0" prefWidth="588.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn prefWidth="410.0" text="Title" />
-                      <TableColumn prefWidth="75.0" text="# Books" />
-                        <TableColumn prefWidth="75.0" text="# Words" />
+                      <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="370.0" text="Title" />
+                      <TableColumn fx:id="numBooks" prefWidth="115.0" text="# Books" />
+                        <TableColumn fx:id="uniqueWordsCol" prefWidth="120.0" text="Unique Words" />
+                        <TableColumn fx:id="totalWordsCol" prefWidth="140.0" text="Total Words" />
                     </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
