--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
+<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
    <center>
       <SplitPane dividerPositions="0.27848101265822783" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
@@ -35,6 +35,7 @@
                     <columns>
                       <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="270.0" text="Title" />
                         <TableColumn fx:id="authorCol" onEditCommit="#changeAuthorCellEvent" prefWidth="105.0" text="Author" />
+                        <TableColumn fx:id="genreCol" onEditCommit="#changeGenreCellEvent" prefWidth="75.0" text="Genre" />
                         <TableColumn fx:id="ageCol" onEditCommit="#changeAgeCellEvent" prefWidth="75.0" text="Age" />
                         <TableColumn fx:id="isbnCol" onEditCommit="#changeISBNCellEvent" prefWidth="75.0" text="ISBN" />
                       <TableColumn fx:id="uniqueWordsCol" prefWidth="109.0" text="Unique Words" />
