--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -3,35 +3,27 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
+<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
    <center>
-      <SplitPane dividerPositions="0.27848101265822783" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.24452554744525548" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
           <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="121.0" prefWidth="778.0">
                <children>
-                  <Button fx:id="newDictBtn" layoutX="6.0" layoutY="10.0" mnemonicParsing="false" onAction="#generateDictBtn" text="Generate New Dictionary" />
-                  <Button fx:id="settingsBtn" layoutX="512.0" layoutY="7.0" mnemonicParsing="false" text="Settings" />
-                  <Button fx:id="importBtn" layoutX="103.0" layoutY="51.0" mnemonicParsing="false" onAction="#importBooksBtn" prefHeight="31.0" prefWidth="185.0" text="Import Books" />
-                  <MenuButton fx:id="actionBtn" layoutX="8.0" layoutY="51.0" mnemonicParsing="false" text="Action">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                  </MenuButton>
-                  <Button fx:id="deleteBtn" layoutX="6.0" layoutY="91.0" mnemonicParsing="false" onAction="#deleteBtn" text="Delete" />
+                  <Button fx:id="newDictBtn" layoutX="563.0" layoutY="10.0" mnemonicParsing="false" onAction="#generateDictBtn" text="Generate New Dictionary" />
+                  <Button fx:id="addBook" layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#addBooksBtn" text="Add to Library" />
+                  <Button fx:id="importBtn" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" onAction="#importBooksBtn" prefHeight="31.0" prefWidth="185.0" text="Import Books" />
+                  <Button fx:id="deleteBtn" layoutX="14.0" layoutY="91.0" mnemonicParsing="false" onAction="#deleteBtn" text="Delete" />
                </children>
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView fx:id="tableView" editable="true" prefHeight="429.0" prefWidth="588.0" AnchorPane.bottomAnchor="-34.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableView" editable="true" layoutY="39.0" prefHeight="414.0" prefWidth="778.0" AnchorPane.bottomAnchor="-34.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="270.0" text="Title" />
                         <TableColumn fx:id="authorCol" onEditCommit="#changeAuthorCellEvent" prefWidth="105.0" text="Author" />
