--- a/src/main/java/controllers/LibraryView.fxml
+++ b/src/main/java/controllers/LibraryView.fxml
@@ -30,6 +30,7 @@
                   <Button fx:id="openLib" layoutX="14.0" layoutY="58.0" mnemonicParsing="false" onAction="#openLibBtn" text="Open Library" />
                   <Button fx:id="libDeleteBtn" layoutX="141.0" layoutY="58.0" mnemonicParsing="false" onAction="#libDeleteBtn" text="Delete" />
                   <Button fx:id="bookDeleteBtn" layoutX="141.0" layoutY="58.0" mnemonicParsing="false" onAction="#bookDeleteBtn" text="Delete" visible="false" />
+                  <Button fx:id="mergeBtn" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" onAction="#mergeBtn" text="Merge" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="778.0">
