--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -32,6 +32,7 @@
                         <TableColumn fx:id="isbnCol" onEditCommit="#changeISBNCellEvent" prefWidth="75.0" text="ISBN" />
                       <TableColumn fx:id="uniqueWordsCol" prefWidth="109.0" text="Unique Words" />
                         <TableColumn fx:id="totalWordsCol" prefWidth="151.0" text="Total Words" />
+                        <TableColumn fx:id="completeCol" prefWidth="75.0" text="Complete" />
                     </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
