--- a/src/main/java/controllers/LibraryView.fxml
+++ b/src/main/java/controllers/LibraryView.fxml
@@ -24,11 +24,12 @@
         <items>
           <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="103.0" prefWidth="778.0">
                <children>
-                  <Button fx:id="createNewLib" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#newLibrary" text="Create New Library" />
+                  <Button fx:id="createNewLib" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#newLibrary" prefHeight="32.0" prefWidth="196.0" text="Create New Library" />
                   <Button fx:id="openLib" layoutX="14.0" layoutY="58.0" mnemonicParsing="false" onAction="#openLibBtn" text="Open Library" />
                   <Button fx:id="libDeleteBtn" layoutX="141.0" layoutY="58.0" mnemonicParsing="false" onAction="#libDeleteBtn" text="Delete" />
                   <Button fx:id="bookDeleteBtn" layoutX="141.0" layoutY="58.0" mnemonicParsing="false" onAction="#bookDeleteBtn" text="Delete" visible="false" />
-                  <Button fx:id="mergeBtn" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" onAction="#mergeBtn" text="Merge" />
+                  <Button fx:id="mergeBtn" layoutX="599.0" layoutY="58.0" mnemonicParsing="false" onAction="#mergeBtn" prefHeight="32.0" prefWidth="165.0" text="Merge" />
+                  <Button fx:id="generateBtn" layoutX="599.0" layoutY="14.0" mnemonicParsing="false" onAction="#generateBtn" text="Generate Dictionary" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="778.0">
@@ -44,7 +45,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </TableView>
-                  <TableView fx:id="libView" editable="true" prefHeight="414.0" prefWidth="778.0" visible="false">
+                  <TableView fx:id="libView" editable="true" prefHeight="414.0" prefWidth="778.0" visible="false" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columns>
                         <TableColumn fx:id="titleCol" prefWidth="270.0" text="Title" />
                         <TableColumn fx:id="authorCol" prefWidth="105.0" text="Author" />
@@ -53,6 +54,7 @@
                         <TableColumn fx:id="isbnCol" prefWidth="75.0" text="ISBN" />
                         <TableColumn fx:id="uniqueWordsCol" prefWidth="109.0" text="Unique Words" />
                         <TableColumn fx:id="totalWordsCol" prefWidth="151.0" text="Total Words" />
+                        <TableColumn fx:id="completeCol" prefWidth="75.0" text="Column X" />
                      </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
