--- a/src/main/java/controllers/MainView.fxml
+++ b/src/main/java/controllers/MainView.fxml
@@ -17,7 +17,7 @@
         <items>
           <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="778.0">
                <children>
-                  <Text layoutX="47.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What the Program can do:" textAlignment="CENTER" wrappingWidth="665.13671875" AnchorPane.leftAnchor="47.0" AnchorPane.rightAnchor="65.86328125">
+                  <Text fx:id="txt" layoutX="47.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What the Program can do:" textAlignment="CENTER" wrappingWidth="665.13671875" AnchorPane.leftAnchor="47.0" AnchorPane.rightAnchor="65.86328125">
                      <font>
                         <Font size="24.0" />
                      </font>
