--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
+<BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
    <center>
       <SplitPane dividerPositions="0.24452554744525548" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
@@ -32,7 +32,7 @@
                         <TableColumn fx:id="isbnCol" onEditCommit="#changeISBNCellEvent" prefWidth="75.0" text="ISBN" />
                       <TableColumn fx:id="uniqueWordsCol" prefWidth="109.0" text="Unique Words" />
                         <TableColumn fx:id="totalWordsCol" prefWidth="151.0" text="Total Words" />
-                        <TableColumn fx:id="completeCol" prefWidth="75.0" text="Complete" />
+                        <TableColumn fx:id="completeCol" onEditCommit="#changeCompleteCellEvent" prefWidth="75.0" text="Complete" />
                     </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
