--- a/src/main/java/controllers/BookView.fxml
+++ b/src/main/java/controllers/BookView.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,19 +13,11 @@
 
 <BorderPane fx:id="BookView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.BookController">
    <center>
-      <SplitPane dividerPositions="0.24452554744525548" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="121.0" prefWidth="778.0">
-               <children>
-                  <Button fx:id="newDictBtn" layoutX="563.0" layoutY="10.0" mnemonicParsing="false" onAction="#generateDictBtn" text="Generate New Dictionary" />
-                  <Button fx:id="addBook" layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#addBooksBtn" text="Add to Library" />
-                  <Button fx:id="importBtn" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" onAction="#importBooksBtn" prefHeight="31.0" prefWidth="185.0" text="Import Books" />
-                  <Button fx:id="deleteBtn" layoutX="14.0" layoutY="91.0" mnemonicParsing="false" onAction="#deleteBtn" text="Delete" />
-               </children>
-            </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView fx:id="tableView" editable="true" layoutY="39.0" prefHeight="414.0" prefWidth="778.0" AnchorPane.bottomAnchor="-34.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableView" editable="true" layoutX="20.0" layoutY="45.0" prefHeight="454.0" prefWidth="738.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="45.0">
                     <columns>
                       <TableColumn fx:id="titleCol" onEditCommit="#changeTitleCellEvent" prefWidth="270.0" text="Title" />
                         <TableColumn fx:id="authorCol" onEditCommit="#changeAuthorCellEvent" prefWidth="105.0" text="Author" />
@@ -38,6 +32,11 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </TableView>
+                  <Button fx:id="addBook" layoutX="14.0" layoutY="451.0" mnemonicParsing="false" onAction="#addBooksBtn" text="Add to Library" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" />
+                  <Button fx:id="deleteBtn" layoutX="695.0" layoutY="503.0" mnemonicParsing="false" onAction="#deleteBtn" text="Delete" textAlignment="CENTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+                  <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
+                  <Button fx:id="librariesBtn" layoutX="85.0" layoutY="7.0" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
+                  <Button fx:id="booksBtn" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#goBooks" text="Books" />
                </children>
             </AnchorPane>
         </items>
@@ -53,16 +52,33 @@
       <AnchorPane maxHeight="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
    <top>
-      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
-            <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
-            <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-            <Button fx:id="booksBtn" mnemonicParsing="false" text="Books" />
-            <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
-        </buttons>
+      <MenuBar BorderPane.alignment="CENTER">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem fx:id="saveBtn" mnemonicParsing="false" onAction="#saveBtn" text="Save" />
+                  <MenuItem fx:id="closeBtn" mnemonicParsing="false" onAction="#closeBtn" text="Close" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem fx:id="importBtn1" mnemonicParsing="false" onAction="#importBtn" text="Import Books" />
+                  <MenuItem fx:id="genBtn" mnemonicParsing="false" onAction="#genBtn" text="Generate Dictionary" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem fx:id="aboutBtn" mnemonicParsing="false" onAction="#aboutBtn" text="About" />
+                  <MenuItem fx:id="settingsBtn" mnemonicParsing="false" onAction="#settingsBtn" text="Settings" />
+               </items>
+            </Menu>
+         </menus>
          <padding>
-            <Insets right="10.0" />
+            <Insets bottom="1.0" left="10.0" right="10.0" top="1.0" />
          </padding>
-      </ButtonBar>
+         <BorderPane.margin>
+            <Insets bottom="1.0" left="10.0" right="10.0" top="1.0" />
+         </BorderPane.margin>
+      </MenuBar>
    </top>
 </BorderPane>
