--- a/src/main/java/controllers/LibraryView.fxml
+++ b/src/main/java/controllers/LibraryView.fxml
@@ -2,14 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="LibraryView" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.LibraryController">
+<BorderPane fx:id="LibraryView" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.LibraryController">
    <bottom>
       <AnchorPane maxHeight="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </bottom>
@@ -20,21 +22,11 @@
       <AnchorPane maxWidth="10.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </right>
    <center>
-      <SplitPane dividerPositions="0.12226277372262774" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="103.0" prefWidth="778.0">
-               <children>
-                  <Button fx:id="createNewLib" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#newLibrary" prefHeight="32.0" prefWidth="196.0" text="Create New Library" />
-                  <Button fx:id="openLib" layoutX="14.0" layoutY="58.0" mnemonicParsing="false" onAction="#openLibBtn" text="Open Library" />
-                  <Button fx:id="libDeleteBtn" layoutX="141.0" layoutY="58.0" mnemonicParsing="false" onAction="#libDeleteBtn" text="Delete" />
-                  <Button fx:id="bookDeleteBtn" layoutX="141.0" layoutY="58.0" mnemonicParsing="false" onAction="#bookDeleteBtn" text="Delete" visible="false" />
-                  <Button fx:id="mergeBtn" layoutX="599.0" layoutY="58.0" mnemonicParsing="false" onAction="#mergeBtn" prefHeight="32.0" prefWidth="165.0" text="Merge" />
-                  <Button fx:id="generateBtn" layoutX="599.0" layoutY="14.0" mnemonicParsing="false" onAction="#generateBtn" text="Generate Dictionary" />
-               </children>
-            </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="778.0">
                <children>
-                  <TableView fx:id="tableView" prefHeight="398.0" prefWidth="588.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableView" prefHeight="386.0" prefWidth="778.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="45.0">
                     <columns>
                       <TableColumn fx:id="libTitleCol" onEditCommit="#changeTitleCellEvent" prefWidth="370.0" text="Title" />
                       <TableColumn fx:id="numBooks" prefWidth="115.0" text="# Books" />
@@ -45,7 +37,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </TableView>
-                  <TableView fx:id="libView" editable="true" prefHeight="414.0" prefWidth="778.0" visible="false" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="libView" editable="true" prefHeight="414.0" prefWidth="778.0" visible="false" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="45.0">
                      <columns>
                         <TableColumn fx:id="titleCol" editable="false" prefWidth="270.0" text="Title" />
                         <TableColumn fx:id="authorCol" editable="false" prefWidth="105.0" text="Author" />
@@ -60,25 +52,47 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </TableView>
+                  <Button fx:id="openLib" layoutX="179.0" layoutY="507.0" mnemonicParsing="false" onAction="#openLibBtn" text="View Library" AnchorPane.bottomAnchor="14.0" />
+                  <Button fx:id="createNewLib" layoutX="10.0" layoutY="507.0" mnemonicParsing="false" onAction="#newLibrary" text="Create New Library" AnchorPane.bottomAnchor="14.0" />
+                  <Button fx:id="mergeBtn" layoutX="299.0" layoutY="507.0" mnemonicParsing="false" onAction="#mergeBtn" prefHeight="32.0" prefWidth="165.0" text="Merge" AnchorPane.bottomAnchor="14.0" />
+                  <Button fx:id="libDeleteBtn" layoutX="695.0" layoutY="507.0" mnemonicParsing="false" onAction="#libDeleteBtn" text="Delete" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+                  <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
+                  <Button fx:id="librariesBtn" layoutX="85.0" layoutY="7.0" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
+                  <Button fx:id="booksBtn" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#goBooks" text="Books" />
+                  <Button fx:id="bookDeleteBtn" layoutX="695.0" layoutY="507.0" mnemonicParsing="false" onAction="#bookDeleteBtn" text="Delete" visible="false" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
    </center>
    <top>
-      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
-            <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
-            <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-            <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
-            <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
-        </buttons>
+      <MenuBar BorderPane.alignment="CENTER">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem fx:id="saveBtn" mnemonicParsing="false" onAction="#saveBtn" text="Save" />
+                  <MenuItem fx:id="closeBtn" mnemonicParsing="false" onAction="#closeBtn" text="Close" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem fx:id="importBtn1" mnemonicParsing="false" onAction="#importBtn" text="Import Books" />
+                  <MenuItem fx:id="genBtn" mnemonicParsing="false" onAction="#genBtn" text="Generate Dictionary" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem fx:id="aboutBtn" mnemonicParsing="false" onAction="#aboutBtn" text="About" />
+                  <MenuItem fx:id="settingsBtn" mnemonicParsing="false" onAction="#settingsBtn" text="Settings" />
+               </items>
+            </Menu>
+         </menus>
          <BorderPane.margin>
-            <Insets />
+            <Insets bottom="1.0" left="10.0" right="10.0" top="1.0" />
          </BorderPane.margin>
          <padding>
-            <Insets right="10.0" />
+            <Insets bottom="1.0" left="10.0" right="10.0" top="1.0" />
          </padding>
-      </ButtonBar>
+      </MenuBar>
    </top>
 </BorderPane>
