--- a/src/main/java/controllers/SettingsView.fxml
+++ b/src/main/java/controllers/SettingsView.fxml
@@ -17,7 +17,7 @@
          <items>
             <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="58.0" prefWidth="778.0">
                <children>
-                  <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
+                  <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" visible="false" />
                   <Button fx:id="librariesBtn" layoutX="85.0" layoutY="7.0" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
                   <Button fx:id="booksBtn" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#goBooks" text="Books" />
                   <Text fill="#393939" layoutX="257.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="221.916015625">
