--- a/src/main/java/controllers/LibraryView.fxml
+++ b/src/main/java/controllers/LibraryView.fxml
@@ -30,8 +30,8 @@
                     <columns>
                       <TableColumn fx:id="libTitleCol" onEditCommit="#changeTitleCellEvent" prefWidth="370.0" text="Title" />
                       <TableColumn fx:id="numBooks" prefWidth="115.0" text="# Books" />
-                        <TableColumn fx:id="libUniqueWordsCol" prefWidth="120.0" text="Unique Words" />
-                        <TableColumn fx:id="libTotalWordsCol" prefWidth="140.0" text="Total Words" />
+                        <TableColumn fx:id="libUniqueWordsCol" prefWidth="120.0" sortable="false" text="Unique Words" />
+                        <TableColumn fx:id="libTotalWordsCol" prefWidth="140.0" sortable="false" text="Total Words" />
                     </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -43,10 +43,10 @@
                         <TableColumn fx:id="authorCol" editable="false" prefWidth="105.0" text="Author" />
                         <TableColumn fx:id="genreCol" editable="false" prefWidth="75.0" text="Genre" />
                         <TableColumn fx:id="ageCol" editable="false" prefWidth="75.0" text="Age" />
-                        <TableColumn fx:id="isbnCol" editable="false" prefWidth="75.0" text="ISBN" />
-                        <TableColumn fx:id="uniqueWordsCol" editable="false" prefWidth="109.0" text="Unique Words" />
-                        <TableColumn fx:id="totalWordsCol" editable="false" prefWidth="151.0" text="Total Words" />
-                        <TableColumn fx:id="completeCol" editable="false" prefWidth="75.0" text="Column X" />
+                        <TableColumn fx:id="isbnCol" editable="false" prefWidth="75.0" sortable="false" text="ISBN" />
+                        <TableColumn fx:id="uniqueWordsCol" editable="false" prefWidth="109.0" sortable="false" text="Unique Words" />
+                        <TableColumn fx:id="totalWordsCol" editable="false" prefWidth="151.0" sortable="false" text="Total Words" />
+                        <TableColumn fx:id="completeCol" editable="false" prefWidth="75.0" text="Complete" />
                      </columns>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -56,7 +56,7 @@
                   <Button fx:id="createNewLib" layoutX="10.0" layoutY="507.0" mnemonicParsing="false" onAction="#newLibrary" text="Create New Library" AnchorPane.bottomAnchor="14.0" />
                   <Button fx:id="mergeBtn" layoutX="299.0" layoutY="507.0" mnemonicParsing="false" onAction="#mergeBtn" prefHeight="32.0" prefWidth="165.0" text="Merge" AnchorPane.bottomAnchor="14.0" />
                   <Button fx:id="libDeleteBtn" layoutX="695.0" layoutY="507.0" mnemonicParsing="false" onAction="#libDeleteBtn" text="Delete" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-                  <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
+                  <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" visible="false" />
                   <Button fx:id="librariesBtn" layoutX="85.0" layoutY="7.0" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
                   <Button fx:id="booksBtn" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#goBooks" text="Books" />
                   <Button fx:id="bookDeleteBtn" layoutX="695.0" layoutY="507.0" mnemonicParsing="false" onAction="#bookDeleteBtn" text="Delete" visible="false" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
